objects/FieldID__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountPlanGraphID2__c</fullName>
        <label>AccountPlanGraphID2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPlanGraphID3__c</fullName>
        <label>AccountPlanGraphID3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPlanGraphID4__c</fullName>
        <label>AccountPlanGraphID4</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityDivision__c</fullName>
        <label>ActivityDivision</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>ActivityType</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Opp_Project__c</fullName>
        <label>CE_Opp_Project</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Opp_SalesModel__c</fullName>
        <label>CE_Opp_SalesModel</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Opp_Status__c</fullName>
        <label>CE_Opp_Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Opportunity_Division__c</fullName>
        <label>CE_Opportunity_Division</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallDivision__c</fullName>
        <label>CallDivision</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppStageID__c</fullName>
        <label>OppStageID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Field IDs</label>
</CustomObject>